--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@ The title of the webpage
 This is where information to be presented to the user is entered.
 </body>
 </html>
- 
+ <li><a href="https://github.com/eliement">Elie Tan Zhi Le 1J</a></li>
